package proto_ff;

import "yd_fieldoptions.proto";


message E_PointPoint
{
	optional int64 m_id = 1[(yd_fieldoptions.field_cname) = "路径ID"];
	optional int64 m_belongtosceneid = 2[(yd_fieldoptions.field_cname) = "所属场景"];
}


message Sheet_PointPoint
{
	repeated E_PointPoint E_PointPoint_List = 1[(yd_fieldoptions.field_arysize)=200];
}
